--- a/public/main.css
+++ b/public/main.css
@@ -380,6 +380,12 @@ body {
     text-overflow: ellipsis;
 }
 
+.area-conversa {
+}
+
+.conversa-vazia {
+}
+
 .cabecalho-conversa {
     background-color: #4c4c4c;
     color: white;
